--- a/app/css/style_prospect.css
+++ b/app/css/style_prospect.css
@@ -1,44 +1,48 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 
-.content {
+form {
     background-color: #fff;
+    margin: 30px 0 0 0;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
-    text-align: center;
+    max-width: 100%;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
+h1 {
+    text-align: center;
+    color: #333;
 }
 
 label {
-    margin-bottom: 5px;
+    display: block;
+    margin: 10px 0 5px;
+    color: #555;
 }
 
 input {
-    margin-bottom: 15px;
+    width: 100%;
     padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
-    font-size: 14px;
 }
 
 button {
-    background-color: #007bff;
-    color: #fff;
+    width: 100%;
     padding: 10px;
+    background-color: #3498db;
+    color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -46,5 +50,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #2980b9;
 }
